objects/ssot__MaterialityTopic__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Category__c</fullName>
        <label>Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Materiality Topic Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentTopicId__c</fullName>
        <label>Parent Topic</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SortOrderNumber__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659056784_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MaterialityTopic_ParentTopicId_map_M_rel</label>
        <referenceTo>ssot__MaterialityTopic__dlm</referenceTo>
        <relationshipLabel>MaterialityTopic_ParentTopicId_map_M_rel</relationshipLabel>
        <relationshipName>rel_1731659056784_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>